<resources>
    <string name="app_name">XuTest</string>

    <string name="barcode_name">Barcode Scan</string>
    <string name="but_start">Single Scan</string>
    <string name="but_stop">Stop Scan</string>
    <string name="but_close">Close</string>
    <string name="but_repeat">Repeat Scan</string>
    <string name="but_clear">Clear</string>
    <string name="dialog_title">Content</string>
    <string name="spinner">Scan key choose</string>

    <string name="DEV_OPEN_ERR">Device open failed！Software will quit！</string>
    <string name="DIA_ALERT">Warning！</string>
    <string name="DIA_CHECK">Confirm</string>

    <string name="but_test">Test</string>

    <!-- exit -->
    <string name="key_test_back_title">Remind</string>
    <string name="action_exit_title">Exit</string>
    <string name="action_exit_content">Whether out of the current application</string>
    <string name="action_exit_sure">Sure</string>
    <string name="action_exit_cancel">Cancel</string>
    <string name="action_dialog_setting_config">Please check the "Enable Keyreport Scan" and "
        Enable Keyreport Scan with warning tone" of Accessibility</string>
    <string name="action_dialog_setting_config_sure_go">Go to set</string>


    <string name="input_username">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_rfid">RFID资产盘点系统</string>
    <string name="rfid_number">电子编号:%s</string>
    <string name="rfid_title">资产名称:%s</string>
    <string name="online_mode">联网模式</string>
    <string name="offline_mode">离线模式</string>
    <string name="online_text">连网使用需要插入手机卡并开通上网，也可连接WIFI网络使用。  连网模式下，用户登录后可以直接向服务器请求和发送数据，包括新增资产信息和任务盘点记录。</string>
    <string name="offline_text">离线模式下，新增资产信息和任务盘点记录需要保存到手持机上，连通网络以后将记录同步到服务器上。  （使用该模式前，需要先连网登录并下载基础数据和盘点任务方能使用）</string>
    <string name="download_assets">下载资产信息</string>
    <string name="download_user_info">下载人员信息</string>
    <string name="download_assets_location">下载资产位置字典</string>
    <string name="download_assets_status">下载资产状态字典</string>
    <string name="download_supplier">下载供应商字典</string>
    <string name="upload_assets_info">上传新增资产信息</string>
    <string name="start_sync">开始同步</string>
    <string name="update_position">更新盘点任务</string>
    <string name="waiting">waiting</string>
    <string name="done">done</string>
    <string name="equipment_details">资产详情</string>
    <string name="by_assets_name">按资产名称</string>
    <string name="title_activity_check_details">CheckDetailsActivity</string>
    <string name="tv_model">设备型号：%s</string>
    <string name="tv_year">立项年份：%s</string>
    <string name="tv_confirm_no">确认书号：%s</string>
    <string name="tv_price">设备价格：%s</string>
    <string name="tv_date">合同日期：%s</string>
    <string name="tv_warranty_period">质保期：%s</string>
    <string name="tv_equipment_sn">出厂编号：%s</string>
    <string name="tv_freq_range">频率范围：%s</string>
    <string name="tv_sid">供应商：%s</string>
    <string name="tv_arch_no">档案号：%s</string>
    <string name="tv_pro_id">所在位置：%s</string>
    <string name="tv_total_amount">数量：%s</string>
    <string name="tv_user">管理员：%s</string>
    <string name="tv_manufacturer">生产厂商：%s</string>
    <string name="tv_eq_memo">备注：%s</string>
    <string name="tv_eq_status">状态：%s</string>
    <string name="add_assets_info">添加资产信息</string>

    <string name="tev_check_name">盘点单: </string>
    <string name="tev_build_time">创建时间:</string>
    <string name="tev_build_person">创建人: </string>
    <string name="tev_check_person">盘点人: </string>
    <string name="details_check">进行盘点</string>
    <string name="check_room">按照资产位置盘点</string>
    <string name="all_choose">按照资产范围盘点</string>
    <string name="first_box">盘点范围:</string>
    <string name="dz_code">电子编码:</string>
    <string name="sb_name">设备名称:</string>
    <string name="sb_model">设备型号:</string>
    <string name="lx_year">立项年份:</string>
    <string name="qr_number">确认书号:</string>
    <string name="sb_price">设备价格:</string>
    <string name="ht_date">合同日期:</string>
    <string name="zb_date">质保期:</string>
    <string name="cate">分类:</string>
    <string name="ch_number">出厂编号:</string>
    <string name="pl_area">频率范围:</string>
    <string name="gy_name">供应商:</string>
    <string name="da_number">档案号:</string>
    <string name="assets_location">位置:</string>
    <string name="assets_dept">部门:</string>
    <string name="assets_count">数量:</string>
    <string name="gl_people">管理员:</string>
    <string name="sc_name">生产厂商:</string>
    <string name="assets_status">状态:</string>
    <string name="assets_mark">备注:</string>
    <string name="commit">提交</string>
    <string name="upload_successful">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="save_successful">保存成功</string>
    <string name="sure_logout">您确定现在退出登录吗？</string>
    <string name="content_null">参数不全，请补充完整</string>
    <string name="year_month_day">%d-%d-%d</string>
    <string name="show_room_position">显示库房位置</string>
    <string name="lable_inventory_details">盘点单详情</string>
    <string name="inventory">盘点</string>
    <string name="rfid_exception">Rfid读取器错误，退出重试</string>
    <string name="inventory_time_tv">盘点时间：</string>
    <string name="inventory_start">开始</string>
    <string name="inventory_stop">结束</string>
    <string name="inventory_upload">上传</string>
    <string name="tag_total_text">已扫描到标签数</string>
    <string name="overage_text">盘盈</string>
    <string name="loss_text">盘亏</string>
    <string name="_0">0</string>

    <string name="sure">确定</string>
    <string name="miss">取消</string>
    <string name="download_dept">下载部门字典</string>
    <string name="title_activity_mvp_test">MvpTestActivity</string>
    <string name="mvp_test">MVP测试</string>

    <string name="_password">密码</string>
    <string name="_username">账号</string>
    <string name="_login">登录</string>
    <string name="_autotest">自动提示</string>
    <string name="_clear_auto">清空自动提示</string>
    <string name="scan">scan</string>
    <string name="show_message">show_message</string>

</resources>
