<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.speedata.xutest.add.AddAssetsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_dz_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_clickable="false"
            app:av_title="@string/dz_code"/>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_sb_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/sb_name"/>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_sb_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/sb_model"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/lx_year"/>

            <TextView
                android:id="@+id/av_lx_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_assets"
                android:gravity="center_vertical"
                android:hint="@null"/>
        </LinearLayout>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_qr_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/qr_number"/>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_sb_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/sb_price"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/ht_date"/>

            <TextView
                android:id="@+id/av_ht_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_assets"
                android:gravity="center_vertical"
                android:hint="@null"/>
        </LinearLayout>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_zb_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/zb_date"/>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_ch_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/ch_number"/>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_pl_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/pl_area"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/gy_name"/>

            <TextView
                android:id="@+id/av_gy_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_assets"
                android:gravity="center_vertical"
                android:hint="@null"/>
        </LinearLayout>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_da_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/da_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/assets_location"/>

            <TextView
                android:id="@+id/av_assets_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_assets"
                android:gravity="center_vertical"
                android:hint="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/assets_dept"/>

            <TextView
                android:id="@+id/av_dept"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_assets"
                android:gravity="center_vertical"
                android:hint="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/cate"/>

            <TextView
                android:id="@+id/av_assets_cate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_assets"
                android:gravity="center_vertical"
                android:hint="@null"/>
        </LinearLayout>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_assets_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/assets_count"
            app:et_type="number"/>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_gl_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/gl_people"/>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_sc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/sc_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/assets_status"/>

            <TextView
                android:id="@+id/av_assets_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_assets"
                android:gravity="center_vertical"
                android:hint="@null"/>
        </LinearLayout>

        <com.speedata.xutest.add.AddAssetsView
            android:id="@+id/av_assets_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:av_title="@string/assets_mark"/>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp30"
            android:layout_marginTop="@dimen/dp15"
            android:background="@drawable/bg_touch_round"
            android:text="@string/commit"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>
