<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.spd.rfid.main.settings.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->





    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RadioButton
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp100"
        android:drawableStart="@drawable/ic_wifi"
        android:id="@+id/radioButton_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_mode" />

        <TextView
            android:textSize="@dimen/sp_16"
            android:layout_margin="@dimen/dp10"
            android:text="@string/online_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <RadioButton
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp50"
        android:drawableStart="@drawable/ic_wifi_off"
        android:id="@+id/radioButton_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline_mode" />

        <TextView
            android:layout_margin="@dimen/dp10"
            android:textSize="@dimen/sp_16"
            android:text="@string/offline_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

</FrameLayout>
