<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:orientation="vertical"
    tools:context="com.speedata.xutest.inventory.TakeInventoryActivity">

    <TextView
        android:id="@+id/tv_inventory_name"
        android:textSize="@dimen/sp18"
        android:padding="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@drawable/layout_divider_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:padding="@dimen/dp10"
            android:id="@+id/tv_inventory_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:padding="@dimen/dp10"
            android:id="@+id/tv_inventory_assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:text="@string/inventory_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/tv_inventory_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@drawable/layout_divider_horizontal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_start"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp50"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp10"
            android:layout_weight="2"
            android:background="@drawable/ic_start"
            android:contentDescription="@drawable/ic_start"
            android:padding="@dimen/dp10" />

        <TextView
            android:id="@+id/tv_upload_start"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/inventory_start"
            android:layout_gravity="center"
            android:padding="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/ib_over"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp50"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@drawable/ic_stop"
            android:contentDescription="@drawable/ic_stop"
            android:padding="@dimen/dp10" />

        <TextView
            android:id="@+id/tv_upload_over"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/inventory_stop"
            android:layout_gravity="center"
            android:padding="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="@dimen/dp10"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/bg_touch_round"
            android:textColor="@android:color/white"
            android:layout_weight="0.5"
            android:text="@string/inventory_upload"
            android:gravity="center"
            android:id="@+id/btn_inventory_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@drawable/layout_divider_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/tag_total_text" />

        <TextView
            android:layout_weight="1"
            android:text="@string/overage_text"
            android:padding="@dimen/dp_4"
            android:textColor="@color/green"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:text="@string/loss_text"
            android:padding="@dimen/dp_4"
            android:textColor="@color/red"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_tag_total"
            android:layout_weight="2"
            android:text="@string/_0"
            android:padding="@dimen/dp_4"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_overage"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/tv_loss"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/_0" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@drawable/layout_divider_horizontal"/>

    <android.support.v7.widget.RecyclerView
        android:padding="@dimen/dp_4"
        android:id="@+id/rv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>
